--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "version": "0.5.0",
   "author": "BigCommerce",
   "dependencies": {
+    "-": "0.0.1",
     "aws-sdk": "^2.488.0",
     "axios": "^0.19.0",
     "bulma": "^0.7.0",
@@ -25,6 +26,7 @@
     "gatsby-transformer-sharp": "^2.1.9",
     "lodash": "^4.17.5",
     "lodash-webpack-plugin": "^0.11.4",
+    "netlify-cli": "^3.24.3",
     "netlify-cms-app": "^2.9.5",
     "netlify-cms-media-library-cloudinary": "^1.3.2",
     "netlify-cms-media-library-uploadcare": "^0.5.2",
